# solver-agentic-spec-coworker

./: LICENSE  README.md  langgraph.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/chatmodes/: current-task-driver.md.chatmode.md  phase-0-scaffolder-md.chatmode.md
.github/prompts/: 00_project-brief.md  10_system-patterns.md  30_development-status.md  35_current-task.md  90_decision-log.md  index.md
.github/workflows/: ci.yml
docs/: PHASE2_NOTES.md
docs/decisions/: adr-0001-initial-architecture.md
docs/design/: 01-silver-gold-schema.md  02-agentic-spec-coworker.md
scripts/: prompt-memory.ts
servers/: memory-mcp.ts
solver_coworker/: __init__.py  config.py  logging.py
solver_coworker/agents/: __init__.py  analysis_agent.py  ingestion_agent.py  schema_agent.py  validation_agent.py
solver_coworker/graphs/: __init__.py  spec_discovery_graph.py
solver_coworker/tools/: __init__.py  api_runner.py  graph_store.py  spec_loader.py  vector_store.py
src/integration_coworker/: cli.py
src/integration_coworker/api/: entrypoint.py  types.py
src/integration_coworker/config/: __init__.py
src/integration_coworker/domain/: models.py
src/integration_coworker/graph/: runtime.py  state.py
src/integration_coworker/graph/nodes/: align_task_with_kg.py  (+16 more)
src/integration_coworker/repo/: context.py  models.py  profiles.py
tests/: __init__.py  test_build_silver_api_model.py  test_end_to_end_integration.py  test_smoke.py  test_spec_discovery_graph.py
tests/fixtures/: mock_payments_openapi.yaml
